--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>NUHMANUDHEEN T</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Golang Developer, Backend Developer"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="www.linkedin.com/in/nuhmanudheent" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -96,18 +94,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 Feb 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9497629260</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kerala, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BBA</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>nuhmanudheent@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nuhmanudheent@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -116,7 +110,6 @@
             </p>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -128,7 +121,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p> As a budding developer, I possess foundational skills in web development, including proficiency in HTML, CSS, and JavaScript. These languages form the building blocks of modern websites, allowing me to create visually appealing and interactive user interfaces. I am also familiar with version control systems like Git, enabling collaborative and efficient project development.
+          <p> As a budding developer, I possess foundational skills in web development, including proficiency in HTML, CSS, GO , POSTGRESQL. allowing me to create visually appealing and interactive user interfaces.
+            I am also familiar with version control systems like Git, enabling collaborative and efficient project development.
             Currently, I am exploring backend development using technologies such as GO LANGUAGE,
              I am excited to embark on this journey of growth in the realm of development. Feel free to explore my portfolio to see some of the projects that showcase my evolving skills in the world of web development.</p>
         </div>
@@ -138,17 +132,12 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill">HTML</span>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill">CSS </span>
+    
             </div>
 
             <div class="progress">
